gen/TraductorC_v2Parser.java
// Generated from C:/Users/alber/OneDrive - Universidad Rey Juan Carlos/Documentos/Universidad - Sexto Curso/Segundo semestre/Procesadores de Lenguajes/PObligatoria_2026/PL_Obligatoria_2026/src/TraductorC_v2.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TraductorC_v2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		IDENT=25, NUM_REAL_CONST=26, NUM_INT_CONST=27, STRING_CONST=28, COMMENT=29, 
		IGNORE=30;
	public static final int
		RULE_prg = 0, RULE_dcllist = 1, RULE_cabecera = 2, RULE_cablist = 3, RULE_cablistP = 4, 
		RULE_cab = 5, RULE_sentlist = 6, RULE_sentlistP = 7, RULE_dcl = 8, RULE_dclP = 9, 
		RULE_defcte = 10, RULE_defvar = 11, RULE_ctelist = 12, RULE_simpvalue = 13, 
		RULE_tipo = 14, RULE_charlength = 15, RULE_varlist = 16, RULE_varlistP = 17, 
		RULE_init = 18, RULE_decproc = 19, RULE_formal_paramlist = 20, RULE_nomparamlist = 21, 
		RULE_nomparamlistP = 22, RULE_dec_s_paramlist = 23, RULE_dec_s_paramlistP = 24, 
		RULE_dec_s_param = 25, RULE_dec_d_paramlist = 26, RULE_tipoparam = 27, 
		RULE_decfun = 28, RULE_dec_f_paramlist = 29, RULE_dec_f_paramlistP = 30, 
		RULE_sent = 31, RULE_exp = 32, RULE_expP = 33, RULE_op = 34, RULE_factor = 35, 
		RULE_factorP = 36, RULE_explist = 37, RULE_proc_call = 38, RULE_subpparamlist = 39, 
		RULE_subproglist = 40, RULE_subprog = 41, RULE_codproc = 42, RULE_codfun = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"prg", "dcllist", "cabecera", "cablist", "cablistP", "cab", "sentlist", 
			"sentlistP", "dcl", "dclP", "defcte", "defvar", "ctelist", "simpvalue", 
			"tipo", "charlength", "varlist", "varlistP", "init", "decproc", "formal_paramlist", 
			"nomparamlist", "nomparamlistP", "dec_s_paramlist", "dec_s_paramlistP", 
			"dec_s_param", "dec_d_paramlist", "tipoparam", "decfun", "dec_f_paramlist", 
			"dec_f_paramlistP", "sent", "exp", "expP", "op", "factor", "factorP", 
			"explist", "proc_call", "subpparamlist", "subproglist", "subprog", "codproc", 
			"codfun"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "';'", "'END'", "'INTERFACE'", "','", "'PARAMETER'", 
			"'::'", "'='", "'INTEGER'", "'REAL'", "'CHARACTER'", "'('", "')'", "'SUBROUTINE'", 
			"'INTENT'", "'IN'", "'OUT'", "'INOUT'", "'FUNCTION'", "'+'", "'-'", "'*'", 
			"'/'", "'CALL'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "IDENT", "NUM_REAL_CONST", "NUM_INT_CONST", "STRING_CONST", "COMMENT", 
			"IGNORE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TraductorC_v2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  private String inputFileName;
	  private StringBuilder definesBuffer = new StringBuilder();

	  public TraductorC_v2Parser(org.antlr.v4.runtime.TokenStream input, String fileName) {
	    this(input);
	    this.inputFileName = fileName;
	  }

	  private String convertString(String s) {
	    if (s.startsWith("\"")) return s;
	    String inner = s.substring(1, s.length() - 1);
	    inner = inner.replace("''", "'");
	    inner = inner.replace("\"", "\\\"");
	    return "\"" + inner + "\"";
	  }

	public TraductorC_v2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrgContext extends ParserRuleContext {
		public String s;
		public DcllistContext dcllist;
		public CabeceraContext cabecera;
		public SentlistContext sentlist;
		public SubproglistContext subproglist;
		public List<TerminalNode> IDENT() { return getTokens(TraductorC_v2Parser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(TraductorC_v2Parser.IDENT, i);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public CabeceraContext cabecera() {
			return getRuleContext(CabeceraContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public SubproglistContext subproglist() {
			return getRuleContext(SubproglistContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitPrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitPrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__0);
			setState(89);
			match(IDENT);
			setState(90);
			match(T__1);
			setState(91);
			((PrgContext)_localctx).dcllist = dcllist();
			setState(92);
			((PrgContext)_localctx).cabecera = cabecera();
			setState(93);
			((PrgContext)_localctx).sentlist = sentlist();
			setState(94);
			match(T__2);
			setState(95);
			match(T__0);
			setState(96);
			match(IDENT);
			setState(97);
			((PrgContext)_localctx).subproglist = subproglist();
			 ((PrgContext)_localctx).s =  definesBuffer.toString()
			           + ((PrgContext)_localctx).cabecera.s
			           + ((PrgContext)_localctx).subproglist.s
			           + "void main(void)\n{\n" + ((PrgContext)_localctx).dcllist.s + ((PrgContext)_localctx).sentlist.s + "}\n"; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DcllistContext extends ParserRuleContext {
		public String s;
		public DclContext dcl;
		public DcllistContext dcllist;
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist() throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dcllist);
		try {
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
			case T__9:
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				((DcllistContext)_localctx).dcl = dcl();
				setState(101);
				((DcllistContext)_localctx).dcllist = dcllist();
				 ((DcllistContext)_localctx).s =  ((DcllistContext)_localctx).dcl.s + ((DcllistContext)_localctx).dcllist.s; 
				}
				break;
			case T__3:
			case T__23:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				 ((DcllistContext)_localctx).s =  ""; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CabeceraContext extends ParserRuleContext {
		public String s;
		public CablistContext cablist;
		public CablistContext cablist() {
			return getRuleContext(CablistContext.class,0);
		}
		public CabeceraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cabecera; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterCabecera(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitCabecera(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitCabecera(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabeceraContext cabecera() throws RecognitionException {
		CabeceraContext _localctx = new CabeceraContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cabecera);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				match(T__3);
				setState(108);
				((CabeceraContext)_localctx).cablist = cablist();
				setState(109);
				match(T__2);
				setState(110);
				match(T__3);
				 ((CabeceraContext)_localctx).s =  ((CabeceraContext)_localctx).cablist.s + "\n"; 
				}
				break;
			case T__23:
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				 ((CabeceraContext)_localctx).s =  ""; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CablistContext extends ParserRuleContext {
		public String s;
		public CabContext cab;
		public CablistPContext cablistP;
		public CabContext cab() {
			return getRuleContext(CabContext.class,0);
		}
		public CablistPContext cablistP() {
			return getRuleContext(CablistPContext.class,0);
		}
		public CablistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cablist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterCablist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitCablist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitCablist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CablistContext cablist() throws RecognitionException {
		CablistContext _localctx = new CablistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cablist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			((CablistContext)_localctx).cab = cab();
			setState(117);
			((CablistContext)_localctx).cablistP = cablistP();
			 ((CablistContext)_localctx).s =  ((CablistContext)_localctx).cab.s + ((CablistContext)_localctx).cablistP.s; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CablistPContext extends ParserRuleContext {
		public String s;
		public CabContext cab;
		public CablistPContext cablistP;
		public CabContext cab() {
			return getRuleContext(CabContext.class,0);
		}
		public CablistPContext cablistP() {
			return getRuleContext(CablistPContext.class,0);
		}
		public CablistPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cablistP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterCablistP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitCablistP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitCablistP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CablistPContext cablistP() throws RecognitionException {
		CablistPContext _localctx = new CablistPContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cablistP);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
			case T__18:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				((CablistPContext)_localctx).cab = cab();
				setState(121);
				((CablistPContext)_localctx).cablistP = cablistP();
				 ((CablistPContext)_localctx).s =  ((CablistPContext)_localctx).cab.s + ((CablistPContext)_localctx).cablistP.s; 
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				 ((CablistPContext)_localctx).s =  ""; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CabContext extends ParserRuleContext {
		public String s;
		public DecprocContext decproc;
		public DecfunContext decfun;
		public DecprocContext decproc() {
			return getRuleContext(DecprocContext.class,0);
		}
		public DecfunContext decfun() {
			return getRuleContext(DecfunContext.class,0);
		}
		public CabContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cab; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterCab(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitCab(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitCab(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CabContext cab() throws RecognitionException {
		CabContext _localctx = new CabContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cab);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				((CabContext)_localctx).decproc = decproc();
				 ((CabContext)_localctx).s =  ((CabContext)_localctx).decproc.s; 
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				((CabContext)_localctx).decfun = decfun();
				 ((CabContext)_localctx).s =  ((CabContext)_localctx).decfun.s; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentlistContext extends ParserRuleContext {
		public String s;
		public SentContext sent;
		public SentlistPContext sentlistP;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistPContext sentlistP() {
			return getRuleContext(SentlistPContext.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorC_v2Listener ) ((TraductorC_v2Listener)listener).exitSentlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorC_v2Visitor ) return ((TraductorC_v2Visitor<? extends T>)visitor).visitSentlist(this);
			else return visitor.visitChildren(this);
		}
	}
